# 5D-Neural-Network-based-Interpolator

./: .env.development  .env.example  .env.production  .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml
backend/: Dockerfile  README.md  benchmark_performance.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/docs/: conf.py
backend/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
backend/docs/_build/html/.doctrees/: index.doctree
backend/fivedreg/: __init__.py  base_fivedreg.py
backend/fivedreg/data_hand/: __init__.py  module.py
backend/tests/: README.md  TESTING_SUMMARY.md  __init__.py  conftest.py
backend/tests/fixtures/: data_generators.py
backend/tests/fixtures/test_data/: linear_large.pkl  linear_medium.pkl  linear_small.pkl  nonlinear.pkl  prediction_data.pkl  with_missing.pkl  with_outliers.pkl
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_data_handler.py  test_neural_network.py
data/: sample_prediction.pkl  sample_training.pkl
docs/: requirements.txt
docs/source/: architecture.rst  conf.py  datasets.rst  index.rst  installation.rst  performance.rst  quickstart.rst
docs/source/api/: backend.rst  frontend.rst  neural_network.rst
docs/source/deployment/: local.rst
docs/source/testing/: overview.rst
frontend/: Dockerfile  package.json
scripts/: README.md  build-docs-pdf.sh  build-docs.sh  create-distribution.sh  diagnose-docker.sh  docker-start.sh  docker-stop.sh  local-build.sh  local-stop.sh  run_tests.sh  stop-local.sh
(+4 files in other folders)
