[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fivedreg"
version = "0.1.0"
description = "A research-grade system deploying neural-network models that can interpolate any 5-dimensional numerical dataset. By Makimona Kiakisolako (bamk3)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Makimona Kiakisolako", email = "bamk3@cam.ac.uk" }
]
keywords = ["neural-network", "interpolation", "5D", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Runtime dependencies (only actual PyPI packages)
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.6",
]


[tool.setuptools]
packages = ["fivedreg", "fivedreg.data_hand"]

[tool.setuptools.package-data]
"fivedreg" = ["*.pkl"]

